Fix FindBugs violations and enable enforcement in sfc
See in-line comments.

Change-Id: Ie3648f0c3a47efa629a0819ccd520e303e10d344
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>